examples/type_system/failing/03_runtime_return_violation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn bad() -> Int {
    "not-an-int"
}

// Runtime contract violation on function return boundary.
bad()
